DFR-1384: send file to bulk print in additional data